--- a/쿠키런.md
+++ b/쿠키런.md
@@ -1,2 +1,3 @@
 # 맵 디자인
 +
+[!IMAGE](https://blogfiles.pstatic.net/MjAxODExMDFfNSAg/MDAxNTQxMDU1OTkwNTMx.ITNrL6gfo10LYpPWEYSJvpdP1wYJW2drWrQMsAmq8e8g.Y0iJ74zIA1ICZh6bGgPTCTf7EgF8DiZgQq3Gm97dyoIg.JPEG.010sejung/Screenshot_20181101-152418_Video_Player.jpg)
