--- a/쿠키런.md
+++ b/쿠키런.md
@@ -1,3 +1,52 @@
 # 맵 디자인
-+
-[!IMAGE](https://blog.naver.com/010sejung/221389553053)
+
+## 기본 맵 종류
+
+### 이글이글 마녀의 오븐
+![IMAGE](https://user-images.githubusercontent.com/43815222/47838631-55bc5f00-ddf3-11e8-9c60-1e55478831cd.jpg)
++ 배경
+  + 오븐
+  + 불이 타오름
++ 장애물
+  + 송곳핀
+  + 포크에 꽂힌 소세지
+  + 감자등
+
+### 수상한 마녀의 부엌
+![IMAGE](https://user-images.githubusercontent.com/43815222/47838632-55bc5f00-ddf3-11e8-93c5-5b1299131d64.jpg)
++ 배경
+  + ' 이글이글 마녀의 오븐' 과 비슷
+  + 실험실의 느낌 (녹아져 있는 진드기 등) 
++ 장애물
+  + 집게핀
+  + 쿠키와 함께 달리는 펫이 담겨진 약물병
+
+### 마녀의 뒷마당
+https://user-images.githubusercontent.com/43815222/47838634-56ed8c00-ddf3-11e8-9c3a-b50629750d16.jpg
++ 배경
+  + 마녀가 사는 듯한 성
+  + 박쥐 그림의 장식
+  + 달리는 부분 : 정원 느낌의 풀 
++ 장애물
+  + 빗자루
+  + 성벽
+  + 박쥐가 날라옴
+  + 해골 팔이 튀어나온다.
+
+
+
+
+
+
+
+
+
+![IMAGE]
+![IMAGE]
+
+![IMAGE]
+
+![IMAGE]
+
+![IMAGE]
+
