--- a/쿠키런.md
+++ b/쿠키런.md
@@ -22,7 +22,7 @@
   + 쿠키와 함께 달리는 펫이 담겨진 약물병
 
 ### 마녀의 뒷마당
-https://user-images.githubusercontent.com/43815222/47838634-56ed8c00-ddf3-11e8-9c3a-b50629750d16.jpg
+![IMAGE](https://user-images.githubusercontent.com/43815222/47838634-56ed8c00-ddf3-11e8-9c3a-b50629750d16.jpg)
 + 배경
   + 마녀가 사는 듯한 성
   + 박쥐 그림의 장식
@@ -32,21 +32,140 @@ https://user-images.githubusercontent.com/43815222/47838634-56ed8c00-ddf3-11e8-9
   + 성벽
   + 박쥐가 날라옴
   + 해골 팔이 튀어나온다.
+  
+### 으스스한 유령 묘지
+![IMAGE](https://user-images.githubusercontent.com/43815222/47838636-56ed8c00-ddf3-11e8-8237-9c51090a4b68.jpg)
+![IMAGE](https://user-images.githubusercontent.com/43815222/47838637-57862280-ddf3-11e8-859a-16972e3ef258.jpg)
++ 배경
+  + 묘지
+  + 바닥 쪽에 안개가 짙게 낌
+  + 산의 느낌
++ 장애물
+  + 해골 팔
+  + 해골 머리
+  + 철장
+  + 묘지판
+  + 유령
+### 오싹한 유령 아지트
+![IMAGE](https://user-images.githubusercontent.com/43815222/47838639-57862280-ddf3-11e8-824e-10613e05e61b.jpg)
++ 배경 
+  + 어두운 숲
+  + 나무가 기괴하게 꺽여져 있음
+  + 가시덤불
++ 장애물
+  + 유령
+  + 묘지판
+  + 유령 얼굴의 나무
+  + 뾰족한 돌
+  + 박쥐
 
-
-
-
-
-
-
-
-
-![IMAGE]
-![IMAGE]
-
-![IMAGE]
-
-![IMAGE]
-
-![IMAGE]
-
+### 울쑬불쑥 두더지굴
+![IMAGE](https://user-images.githubusercontent.com/43815222/47838640-57862280-ddf3-11e8-9112-068a90899c75.jpg)
++ 배경
+  + 땅 속
+  + 땅 위는 묘지
+  + 굴처럼 생김
++ 장애물
+  + 두더지가 기어옴/튀어나옴
+  + 땅이 위로 올라가거나 아래로 내려감
+  + 묘지판을 머리에 얹은 두더지
+  
+### 촉촉한 지하수로
+![IMAGE](https://user-images.githubusercontent.com/43815222/47838642-581eb900-ddf3-11e8-8eaa-191e14adadfd.jpg)
+![IMAGE](https://user-images.githubusercontent.com/43815222/47838643-581eb900-ddf3-11e8-8b1d-1fef56207ca0.jpg)
++ 배경
+  + 지하수로
+  + 어두움
+  + 오물
++ 장애물
+  + 생선 머리
+  + 생선 뒷부분
+  + 창을 들고 서있는 생선
+  + 수도관
+  + 오물이 치솟것나 위에서 쏫아진다
+  
+### 지글지글 숲속 파티
+![IMAGE](https://user-images.githubusercontent.com/43815222/47838645-58b74f80-ddf3-11e8-9069-8a9e5d140f42.jpg)
+![IMAGE](https://user-images.githubusercontent.com/43815222/47838647-58b74f80-ddf3-11e8-9adb-af2b0997283b.jpg)
++ 배경
+  + 숲속 배경
+  + 쿠키는 숯불 위에서 뛰게 됨
++ 장애물
+ + 얼굴을 찌뿌리는 피망
+ + 잘려진 피망
+ + 여러 음식이 꽂힌 꼬치
+ 
+### 뿔난쟁이들의 비밀 농장
+![IMAGE](https://user-images.githubusercontent.com/43815222/47838648-594fe600-ddf3-11e8-9a9a-a2add13d3e0b.jpg)
++ 배경
+  + 숲 속
+  + 나무가 우거짐
++ 장애물
+  + 산타 모양의 인형
+  + 버섯
+  + 벌레(날아오기도 함)
+  
+### 개굴개굴 버섯 숲
+![IMAGE](https://user-images.githubusercontent.com/43815222/47838649-594fe600-ddf3-11e8-93ab-89c28c5432a1.jpg)
+![IMAGE](https://user-images.githubusercontent.com/43815222/47838651-594fe600-ddf3-11e8-8b7c-60ae99e7996e.jpg)
++ 배경 
+  + 숲
+  + 풀이 많음
+  + 매우 큰 버섯이 있음
++ 장애물
+  + 개구리(펄쩍 뛰어오르는 개구리도 있음)
+  + 두마리가 붙어있는 개구리
+  + 기다란 나무
+  
+### 끈적끈적 달팽이 늪
+![IMAGE](https://user-images.githubusercontent.com/43815222/47838622-535a0500-ddf3-11e8-8f9c-f3afddf229ae.jpg)
+![IMAGE](https://user-images.githubusercontent.com/43815222/47838623-53f29b80-ddf3-11e8-97ba-01d0d1a3a1fb.jpg)
++ 배경
+  + 늪
+  + 숲 느낌
+  + 밝다
++ 장애물
+  + 달팽이
+  + 날아오는 진드기 액
+  
+### 꽁꽁 언 에티의 얼음 동굴
+![IMAGE](https://user-images.githubusercontent.com/43815222/47838624-53f29b80-ddf3-11e8-8fa2-8f2b24ea3e91.jpg)
+![IMAGE](https://user-images.githubusercontent.com/43815222/47838625-53f29b80-ddf3-11e8-8d81-5e8f65869ec4.jpg)
++ 배경
+  + 북극 혹은 남극
+  + 전부 얼음
+  + 매우 큰 에티
+  + 쿠키는 얼음 위를 달림
++ 장애물 
+  + 위에서 떨어지는 고드름 / 눈뭉치
+  + 얼름 기둥
+  + 뾰족뾰족하게 솟아있는 얼음
+   
+### 오들오들 예티의 냉장고
+![IMAGE](https://user-images.githubusercontent.com/43815222/47838626-548b3200-ddf3-11e8-9b3c-c6f48bddd936.jpg)
++ 배경
+  + 얼어있는 큰 고기들
+  + 에티들
+  + 고드름 
++ 장애물
+  + 천장에 매달린 얼어붙은 큰 고기
+  + 뼈 있는 작은 고기
+  
+### 얼어붙은 바다 동굴
+![IMAGE](https://user-images.githubusercontent.com/43815222/47838627-548b3200-ddf3-11e8-9f29-e59ccf36db5e.jpg)
++ 배경
+  + 거친 얼음들
+  + 동굴
++ 장애물
+  + 뾰족뾰적한 얼음 장식물
+  + 큰 얼음 기둥
+  + 쿠키가 달리는 화면의 뒤가 까맣다(다른 맵들과 다름)
+  
+### 분주한 거대어 선착장 
+![IMAGE](https://user-images.githubusercontent.com/43815222/47838628-5523c880-ddf3-11e8-8988-26a3734e6227.jpg)
++ 배경 
+  + 바다
+  + 큰 물고기 괴물
++ 장애물
+  + 날아오는 물고기
+  + 줄에 매달린 짐들
