--- a/쿠키런.md
+++ b/쿠키런.md
@@ -169,3 +169,51 @@
 + 장애물
   + 날아오는 물고기
   + 줄에 매달린 짐들
+  
+## 게임 속 아이템
+![IMAGE](https://user-images.githubusercontent.com/43815222/47838633-5654f580-ddf3-11e8-96b2-c7ac45df3dc9.jpg)
++ 빨간 불
+  + 쿠키와 펫이 함께 빠른 속도로 달려간다
+  + 앞에 있는 장애물과 닿을 시 모드 장애물이 튕겨져 나감
+  + 일정 시간이 되면 원래대로 돌아옴
++ 파란 거인 물병
+  + 쿠키가 매우 커진다
+  + 앞에 있는 장애물과 닿을 시 모드 장애물이 튕겨져 나감
+  + 일정 시간이 되면 원래대로 돌아옴
++ 곰돌이 젤리
+  + 앞의 젤리들이 모두 곰돌이 젤리들로 변함
+  + 일정 시간이 되면 원래대로 돌아옴
++ 자석
+  + 펫이 자석이 되어 모든 아이템, 돈들을 끌어당김
+  + 일정 시간이 되면 원래대로 돌아옴
+![IMAGE](https://user-images.githubusercontent.com/43815222/47838644-58b74f80-ddf3-11e8-88ba-a1fd5eb71528.jpg)
+![IMAGE](https://user-images.githubusercontent.com/43815222/47838629-5523c880-ddf3-11e8-9025-0e28975257df.jpg)
++ 보너스 타임
+  + B,O,N,U,S,T,I,M,E 의 모든 젤리를 모으기
+  + 또는 보너스 무지개 젤리를 먹음
+  + 장애물이 없고, 젤리와 아이템 돈만 잇음
+  + 쿠키가 날아당김
++ 미스터리 박스
+  + 게임이 끝난 후 열 수 있음
+  + 여러가지 아이템들이 들어있음
++ 미니 쿠키병
+  + 게임이 끝난 후 열 수 있음
+  + 쿠키 카드, 펫 카드가 들어있음
+  
+## 기본 게임 화면 
++ 위
+  + 보너스 타임 젤리들의 수집 정도
+  + 돈이 모인 정도
+  + 일시정지
+  + 베스트 점수
+  + 현재 누적 점수
+  + 다음등급 점수
++ 아래
+ + 점프 슬라이드 버튼
+ 
+## 플레이 방법
+  + 점프, 슬라이드 버튼을 이용  
+    + 점프 : 위로 낮게 깔려있는 장애물
+    + 더블 점프 : 위로 높게 솟아있는 장애물
+  + 슬라이드
+    + 장애물이 아래 조그만 공간빼고 내려와 있을 때
